--- a/app/src/main/res/layout/activity_pelicula.xml
+++ b/app/src/main/res/layout/activity_pelicula.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -55,5 +56,6 @@
         android:paddingHorizontal="20dp"
         android:textSize="13sp"
         />
+
 
 </LinearLayout>
