--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1"
     android:background="@color/Ghibli"
     android:layout_marginTop="10dp"
     android:paddingVertical="5dp">
@@ -13,8 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_weight="0.5"
         android:textSize="30sp"
         android:textColor="@color/black"
         />
@@ -24,8 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_weight="0.5"
         android:textSize="25sp"
         />
 
@@ -34,8 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_weight="0.5"
         android:textSize="20sp"
         />
 
