--- a/app/src/main/res/layout/activity_pelicula.xml
+++ b/app/src/main/res/layout/activity_pelicula.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="40sp"
+        android:textSize="35sp"
         android:paddingHorizontal="10dp"
         />
 
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:paddingHorizontal="10dp"
         />
 
@@ -44,18 +44,25 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Resumen:"
+        android:textSize="18sp"
+        android:text="Descrition:"
         android:paddingHorizontal="10dp"
         android:layout_marginTop="10dp"
         />
     <TextView
+        android:id="@+id/tvDescripcionPelicula"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/lorem"
+        android:text=""
         android:paddingHorizontal="20dp"
-        android:textSize="13sp"
+        android:textSize="18sp"
         />
 
+    <ImageView
+        android:id="@+id/imageViewPelicula"
+        android:layout_width="319dp"
+        android:layout_height="341dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp" />
 
 </LinearLayout>
