--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:textSize="25sp"
+        android:textColor="#141414"
         />
 
     <TextView
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:textSize="20sp"
+        android:textColor="#141414"
         />
 
 </LinearLayout>
